--- a/src/main/resources/static/list.form.html
+++ b/src/main/resources/static/list.form.html
@@ -15,7 +15,7 @@
         <option value="중식">중식</option>
         <option value="전체">전체 선택하기</option>
     </select>
-    <button type="button" onclick="sendMenu()">선택</button>
+    <button type="button" onclick="sendMenu()">추천받기!</button>
 </form>
 
 <script>
